--- a/03_SensitivityPushingSeparate.Rmd
+++ b/03_SensitivityPushingSeparate.Rmd
@@ -88,7 +88,9 @@ warmup = 1000
 
 ################################################################
 
-suffix = as.character(iterations)
+suffix_nopushing = paste0('_sensitivityNoPushing_', as.character(iterations))
+suffix_onlypushing = paste0('_sensitivityOnlyPushing_', as.character(iterations))
+
 
 
 ```
@@ -121,7 +123,8 @@ model_rows_fixed <- c(
     'pushing_self_cw', 
     'pushing_partner_cw', 
     'day', 
-    'planPlan',
+    'plan_selfPlan',
+    'plan_partnerPlan',
     'weartime_self_cw',
     
     # '-- BETWEEN PERSON MAIN EFFECTS',
@@ -178,7 +181,8 @@ model_rownames_fixed <- c(
     "Daily pushing experienced", 
     "Daily pushing utilized (partner's view)", 
     "Day", 
-    "Actionplan",
+    "Own Actionplan",
+    'Partner Actionplan',
     "Daily weartime",
     
     # "-- BETWEEN PERSON MAIN EFFECTS",
@@ -259,7 +263,8 @@ model_rows_fixed_hu <- c(
     'pushing_self_cw', 
     'pushing_partner_cw', 
     'day', 
-    'planPlan',
+    'plan_selfPlan',
+    'plan_partnerPlan',
     'weartime_self_cw',
     
     # '-- BETWEEN PERSON MAIN EFFECTS',
@@ -280,7 +285,8 @@ model_rows_fixed_hu <- c(
     'hu_pushing_self_cw', 
     'hu_pushing_partner_cw', 
     'hu_day', 
-    'hu_planPlan',
+    'hu_plan_selfPlan',
+    'hu_plan_partnerPlan',
     'hu_weartime_self_cw',
     
     # '-- BETWEEN PERSON MAIN EFFECTS',
@@ -347,7 +353,8 @@ model_rownames_fixed_hu <- c(
     "Daily pushing experienced", 
     "Daily pushing utilized (partner's view)", 
     "Day", 
-    "Actionplan",
+    "Own actionplan",
+    'Partner actionplan', 
     "Daily weartime",
     
     # "-- BETWEEN PERSON MAIN EFFECTS",
@@ -368,7 +375,8 @@ model_rownames_fixed_hu <- c(
     "Hu Daily pushing experienced", 
     "Hu Daily pushing utilized (partner's view)", 
     "Hu Day", 
-    "Hu Actionplan",
+    "Hu Own actionplan",
+    'Hu Partner actionplan', 
     "Hu Daily weartime",
     
     # "-- BETWEEN PERSON MAIN EFFECTS",
@@ -427,44 +435,33 @@ model_rownames_random_hu_ordinal <- c(model_rownames_random_hu,'disc')
 ```{r parameters_for_printing_hu}
 
 rows_to_pack_hu <- list(
-  "Conditional Within-Person Effects" = c(3,11),
-  "Conditional Between-Person Effects" = c(12,18),
+  "Conditional Within-Person Effects" = c(3,12),
+  "Conditional Between-Person Effects" = c(13,19),
   
-  "Hurdle Within-Person Effects" = c(19,27),
-  "Hurdle Between-Person Effects" = c(28,34),
+  "Hurdle Within-Person Effects" = c(20,29),
+  "Hurdle Between-Person Effects" = c(30,36),
   
-  "Random Effects" = c(35, 48), 
-  "Additional Parameters" = c(49,49)
+  "Random Effects" = c(37, 50), 
+  "Additional Parameters" = c(51,51)
   )
 
 rows_to_pack_hu_ordinal <- list(
-  "Intercepts" = c(1,7),
-  "Conditional Within-Person Effects" = c(3+5,11+5),
-  "Conditional Between-Person Effects" = c(12+5,18+5),
+  "Conditional Within-Person Effects" = c(3+5,12+5),
+  "Conditional Between-Person Effects" = c(13+5,19+5),
   
-  "Hurdle Within-Person Effects" = c(19+5,27+5),
-  "Hurdle Between-Person Effects" = c(28+5,34+5),
+  "Hurdle Within-Person Effects" = c(20+5,29+5),
+  "Hurdle Between-Person Effects" = c(30+5,36+5),
   
-  "Random Effects" = c(35+5, 48+5), 
-  "Additional Parameters" = c(49+5,49+6)
+  "Random Effects" = c(37+5, 50+5), 
+  "Additional Parameters" = c(51+5,51+6)
   )
-
 ```
 
-
-## Self-Reported MVPA
-
-```{r explore_pa_sub_dist}
-
-range(df_double$pa_sub, na.rm = T) 
-hist(df_double$pa_sub, breaks = 40) 
-
-hist(log(df_double$pa_sub+00000000001), breaks = 40)
-
-```
 
 
 # WITHOUT PUSHING
+
+## Self-Reported MVPA
 
 ### Hurdle Lognormal Model
 ```{r pa_sub_lognormal, results='hide'}
@@ -478,7 +475,7 @@ formula <- bf(
     persuasion_self_cb + persuasion_partner_cb +
     pressure_self_cb + pressure_partner_cb +
     
-    plan +
+    plan_self + plan_partner +
     day + 
     
     # Random effects
@@ -491,7 +488,7 @@ formula <- bf(
     persuasion_self_cb + persuasion_partner_cb +
     pressure_self_cb + pressure_partner_cb +
     
-    plan +
+    plan_self + plan_partner +
     day + 
     
     # Random effects
@@ -534,7 +531,7 @@ pa_sub <- my_brm(
   chains = 4,
   cores = 4,
   seed = 42,
-  file = file.path("models_cache_brms", paste0("pa_sub_hu_lognormal_Nopushing", suffix))
+  file = file.path("models_cache_brms", paste0("pa_sub_hu_lognormal", suffix_nopushing))
   #, file_refit = 'always'
 )
 
@@ -653,7 +650,7 @@ formula <- bf(
     persuasion_self_cb + persuasion_partner_cb +
     pressure_self_cb + pressure_partner_cb +
     
-    plan +
+    plan_self + plan_partner +
     day + weartime_self_cw + weartime_self_cb +
     
     # Random effects
@@ -695,7 +692,7 @@ pa_obj_log <- my_brm(
   chains = 4,
   cores = 4,
   seed = 7777,
-  file = file.path("models_cache_brms", paste0("pa_obj_log_gaussian_nopushing", suffix))
+  file = file.path("models_cache_brms", paste0("pa_obj_log_gaussian", suffix_nopushing))
 )
 
 pa_obj_log_digest <- digest::digest(pa_obj_log)
@@ -756,7 +753,7 @@ formula <- bf(
     persuasion_self_cb + persuasion_partner_cb +
     pressure_self_cb + pressure_partner_cb +
 
-    plan +
+    plan_self + plan_partner +
     day +
     
     # Random effects
@@ -796,7 +793,7 @@ mood_gauss <- my_brm(
   chains = 4,
   cores = 4,
   seed = 7777,
-  file = file.path("models_cache_brms", paste0("mood_gauss_nopushing", suffix))
+  file = file.path("models_cache_brms", paste0("mood_gauss", suffix_nopushing))
 )
 
 mood_gauss_digest <- digest::digest(mood_gauss)
@@ -853,7 +850,7 @@ formula <- bf(
     persuasion_self_cb + persuasion_partner_cb +
     pressure_self_cb + pressure_partner_cb +
 
-    plan +
+    plan_self + plan_partner +
     day +
     
     # Random effects
@@ -893,7 +890,7 @@ reactance_ordinal <- my_brm(
   chains = 4,
   cores = 4,
   seed = 7777
-  , file = file.path("models_cache_brms", paste0("reactance_ordinal_nopushing", suffix))
+  , file = file.path("models_cache_brms", paste0("reactance_ordinal", suffix_nopushing))
 )
 
 
@@ -971,7 +968,7 @@ formula <- bf(
     persuasion_self_cb + persuasion_partner_cb +
     pressure_self_cb + pressure_partner_cb +
 
-    plan +
+    plan_self + plan_partner +
     day +
     
     # Random effects
@@ -1014,7 +1011,7 @@ is_reactance <- my_brm(
   chains = 4,
   cores = 4,
   seed = 7777,
-  file = file.path("models_cache_brms", paste0("is_reactance_nopushing_", suffix))
+  file = file.path("models_cache_brms", paste0("is_reactance", suffix_nopushing))
   #, file_refit = 'always'
 )
 
@@ -1100,7 +1097,7 @@ summary_all_models <- all_models %>%
 export_xlsx(
   summary_all_models, 
   rows_to_pack = process_model_component(rows_to_pack),
-  file.path("Output", "AllModelsNoPushing.xlsx"), 
+  file.path("Output", paste0("AllModels", suffix_nopushing, ".xlsx")), 
   merge_option = 'header', 
   simplify_2nd_row = TRUE,
   line_above_rows = c(1,2),
@@ -1125,6 +1122,7 @@ formula <- bf(
     pushing_self_cb + pushing_partner_cb +
     
     #plan +
+    plan_partner +
     day + 
     
     # Random effects
@@ -1134,6 +1132,7 @@ formula <- bf(
     pushing_self_cb + pushing_partner_cb +
     
     #plan +
+    plan_partner +
     day + 
     
     # Random effects
@@ -1175,7 +1174,7 @@ pa_sub <- my_brm(
   chains = 4,
   cores = 4,
   seed = 42,
-  file = file.path("models_cache_brms", paste0("pa_sub_hu_lognormal_onlypushing", suffix))
+  file = file.path("models_cache_brms", paste0("pa_sub_hu_lognormal", suffix_onlypushing))
   #, file_refit = 'always'
 )
 
@@ -1291,6 +1290,7 @@ formula <- bf(
     pushing_self_cb + pushing_partner_cb +
     
     #plan +
+    plan_partner +
     day + weartime_self_cw + weartime_self_cb +
     
     # Random effects
@@ -1331,7 +1331,7 @@ pa_obj_log <- my_brm(
   chains = 4,
   cores = 4,
   seed = 7777,
-  file = file.path("models_cache_brms", paste0("pa_obj_log_gaussian_onlypushing", suffix))
+  file = file.path("models_cache_brms", paste0("pa_obj_log_gaussian", suffix_onlypushing))
 )
 
 pa_obj_log_digest <- digest::digest(pa_obj_log)
@@ -1389,6 +1389,7 @@ formula <- bf(
     pushing_self_cb + pushing_partner_cb +
     
     #plan +
+    plan_partner +
     day +
     
     # Random effects
@@ -1427,7 +1428,7 @@ mood_gauss <- my_brm(
   chains = 4,
   cores = 4,
   seed = 7777,
-  file = file.path("models_cache_brms", paste0("mood_gauss_onlypushing", suffix))
+  file = file.path("models_cache_brms", paste0("mood_gauss", suffix_onlypushing))
 )
 
 mood_gauss_digest <- digest::digest(mood_gauss)
@@ -1491,6 +1492,7 @@ formula <- bf(
     pushing_self_cb + pushing_partner_cb +
     
     #plan +
+    plan_partner +
     day +
     
     # Random effects
@@ -1529,7 +1531,7 @@ reactance_ordinal <- my_brm(
   chains = 4,
   cores = 4,
   seed = 7777
-  , file = file.path("models_cache_brms", paste0("reactance_ordinal_onlypushing", suffix))
+  , file = file.path("models_cache_brms", paste0("reactance_ordinal", suffix_onlypushing))
 )
 
 
@@ -1595,6 +1597,7 @@ formula <- bf(
     pushing_self_cb + pushing_partner_cb +
     
     #plan +
+    plan_partner +
     day +
     
     # Random effects
@@ -1636,7 +1639,7 @@ is_reactance <- my_brm(
   chains = 4,
   cores = 4,
   seed = 7777,
-  file = file.path("models_cache_brms", paste0("is_reactance_onlypushing", suffix))
+  file = file.path("models_cache_brms", paste0("is_reactance", suffix_onlypushing))
   #, file_refit = 'always'
 )
 
@@ -1733,7 +1736,7 @@ summary_all_models <- all_models %>%
 export_xlsx(
   summary_all_models, 
   rows_to_pack = process_model_component(rows_to_pack),
-  file.path("Output", "AllModelsOnlyPushing.xlsx"), 
+  file.path("Output", paste0("AllModels", suffix_onlypushing, ".xlsx")), 
   merge_option = 'header', 
   simplify_2nd_row = TRUE,
   line_above_rows = c(1,2),
